# ctapipe_io_magic

./: .codacy.yml  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  download_test_data.sh  environment.yml  eventsource_subclasses.py  example_stage1_config.json  pyproject.toml  setup.cfg  setup.py
.github/: release-drafter.yml
.github/workflows/: ci.yml  deploy.yml
ctapipe_io_magic/: __init__.py  azimuth_conditions.txt  constants.py  exceptions.py  init_copy.py  laser_params_corr_test.py  laser_test_new.py  mars_datalevels.py  params.txt  switch_times.txt  switchtimes1.txt  utils.py  version.py  zd_az_corr.txt
ctapipe_io_magic/tests/: test_lidar.py  test_magic_event_source.py  test_mars_datalevels.py  test_stage1.py  test_version.py
