[metadata]
name = ctapipe_io_magic
description = ctapipe plugin for reading calibrated MAGIC files
long_description = file: README.md
long_description_content_type = text/markdown
author = Ievgen Vovk et al.
author_email = Ievgen.Vovk@mpp.mpg.de
license = BSD 3-Clause

project_urls =
    Bug Tracker = https://github.com/cta-observatory/ctapipe_io_magic/issues
    Source Code = https://github.com/cta-observatory/ctapipe_io_magic

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
zip_safe = False
install_requires=
    astropy
    ctapipe>=0.25.0
    ctapipe_io_lst
    numpy>=1.22
    uproot
    scipy

[options.package_data]
* = resources/*

[options.packages.find]
exclude =
    ctapipe_io_magic._dev_version

[options.extras_require]
tests =
    pytest
dev =
    setuptools_scm[toml]
all =
    %(tests)s
    %(dev)s

[options.entry_points]
ctapipe_io =
    MAGICEventSource = ctapipe_io_magic:MAGICEventSource

[tool:pytest]
minversion = 3.0
addopts = -v

[aliases]
test = pytest

[flake8]
max-line-length = 88
